--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "errandfolks",
-  "version": "1.0.0",
-  "description": "Connecting deaf users with volunteers re COVID-19",
-  "main": "index.js",
+  "name": "vsctemplate",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/darh0ky/errandfolks.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "keywords": [
-    "Deaf",
-    "Seniors"
-  ],
-  "author": "JAM",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/darh0ky/errandfolks/issues"
-  },
-  "homepage": "https://github.com/darh0ky/errandfolks#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
