--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "errandfolks",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+
+    "homepage": "https://chinwobble.github.io/pl-static-content"
+
 }
