testing gh-pages deplopy

--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     ]
   },
 
-    "homepage": "https://chinwobble.github.io/pl-static-content"
+    "homepage": "https://kuiil7.github.io/errandfolks/"
 
 }
